--- a/styles.css
+++ b/styles.css
@@ -1,59 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
-#project{
-  font-family: 'Muli', sans-serif;
+/* Grid Styles */
+#bento {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: 100vh;
-  overflow: hidden;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  background-color: #212121;
-  background-image: linear-gradient(95deg, #111111, #212121);
-  margin-top: -3px;
+}
+
+.bento-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 10px;
+  width: 1000px;
+  height: 1000px;
+  border-radius: 10px;
+}
+
+.bento-item {
+  background-color: #f2f2f2;
+  background-image: url(img/naruto.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+  z-index: 1;
+  animation: transformscalereverse 0.5s ease forwards;
+}
+
+.bento-item:hover {
+  transform: scale(1.1) translateX(5%) translateY(-5%);
+  z-index: 2;
+  animation: transformscale 0.5s ease forwards;
+}
+
+@keyframes transformscale {
+  0% {
+    transform: translateX(0) translateY(0) scale(1);
+  }
+  100% {
+    transform: translateX(5%) translateY(-5%) scale(1.1);
+  }
+}
+
+@keyframes transformscalereverse {
+  0% {
+    transform: translateX(5%) translateY(-5%) scale(1.1);
+  }
+  100% {
+    transform: translateX(0) translateY(0) scale(1);
+  }
+}
+
+.bento-item-1 {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.bento-item-2 {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.bento-item-3 {
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+}
+
+.bento-item-4 {
+  grid-column: 3 / 5;
+  grid-row: 1 / 3;
+}
+
+.bento-item-5 {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+}
+
+.bento-item-6 {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+.bento-item-7 {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+
+.bento-item-8 {
+  grid-column: 4 / 5;
+  grid-row: 3 / 4;
 }
 
 .aud{
   display: none;
-}
-.container-pro{
-  display: flex;
-  width: 90vw;
-}
-
-.card {
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  height: 80vh;
-  border-radius: 50px;
-  color: #fff;
-  cursor: pointer;
-  flex: 0.5;
-  margin: 10px;
-  position: relative;
-  transition: all 700ms ease-in;
-}
-
-.card h3 {
-  font-size: 24px;
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  margin: 0;
-  opacity: 0;
-}
-
-.card.active {
-  flex: 5;
-  box-shadow: black 0px 0px 10px;
-}
-
-.card.active h3 {
-  opacity: 1;
-  transition: opacity 0.3s ease-in 0.4s;
 }
 
 #team {
@@ -63,9 +104,29 @@
   flex-wrap: wrap;
   background-color: #212121;
   background-image: linear-gradient(95deg, #111111, #212121);
-color: Red;
-}  
-#team> .container{
+  color: Red;
+}
+
+.heroactive {
+  display: block !important;
+}
+
+.textstyle {
+  font-size: 4em;
+  font-weight: 600;
+  text-transform: uppercase;
+  -webkit-text-stroke: 1px #ea1300;
+  -webkit-text-fill-color: transparent;
+}
+
+button {
+  border: none;
+  background: none;
+  color: inherit;
+  font-size: large;
+}
+
+#team > .container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,5 +228,3 @@ color: Red;
     display: none;
   }
 }
-  
-  
