--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@
 
 .bento-item {
   background-color: #373737;
-  background-image: url(assets/team2.jpg);
   background-size: cover;
   background-position: center;
   border-radius: 20px;
@@ -61,41 +60,50 @@
 .bento-item-1 {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
+  background-image: url(assets/grid1.jpg);
+
 }
 
 .bento-item-2 {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
+  background-image: url(assets/grid2.avif);
 }
 
 .bento-item-3 {
   grid-column: 1 / 3;
   grid-row: 2 / 3;
+  background-image: url(assets/grid3.jpg);
 }
 
 .bento-item-4 {
   grid-column: 3 / 5;
   grid-row: 1 / 3;
+  background-image: url(assets/grid4.jpg);
 }
 
 .bento-item-5 {
   grid-column: 1 / 2;
   grid-row: 3 / 4;
+  background-image: url(assets/grid5.avif);
 }
 
 .bento-item-6 {
   grid-column: 2 / 3;
   grid-row: 3 / 4;
+  background-image: url(assets/grid6.jpg);
 }
 
 .bento-item-7 {
   grid-column: 3 / 4;
   grid-row: 3 / 4;
+  background-image: url(assets/grid7.webp);
 }
 
 .bento-item-8 {
   grid-column: 4 / 5;
   grid-row: 3 / 4;
+  background-image: url(assets/grid8.jpg);
 }
 
 .aud{
